--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Pseudo-class Selector Practice</title>
-<link rel="stylesheet" href="pseudo.css">
+<link rel="stylesheet" href="index.css">
 </head>
 <body>
 <header>
